--- a/TWITAWAREBL/.classpath
+++ b/TWITAWAREBL/.classpath
@@ -7,6 +7,6 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/TWITAWAREREQUIREDJARS/TWITTER/twitter4j-core-2.1.3-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="/TWITAWAREREQUIREDJARS/TWITTER/twitter4j-core-2.1.3-SNAPSHOT.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
