--- a/TWITAWAREBL/.project
+++ b/TWITAWAREBL/.project
@@ -4,6 +4,7 @@
 	<comment></comment>
 	<projects>
 		<project>TWITAWAREEAR</project>
+		<project>TWITAWAREREQUIREDJARS</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
